# mini-dl-framework

./: .gitignore  CMakeLists.txt  README.md
examples/: mnist_mlp.cpp  xor.cpp
include/: activations.h  autograd.h  linear.h  losses.h  mnist.h  module.h  optimizer.h  tensor.h  utils.h
src/: activations.cpp  autograd.cpp  linear.cpp  losses.cpp  mnist.cpp  module.cpp  optimizer.cpp  tensor.cpp  utils.cpp
tests/: test_activations.cpp  test_autograd.cpp  test_bce_loss.cpp  test_gradient_check.cpp  test_linear_training.cpp  test_matmul_autograd.cpp  test_mnist_loader.cpp  test_softmax_cross_entropy.cpp  test_tensor.cpp  test_utils.cpp
